fixes in validation files

--- a/validation.ipynb
+++ b/validation.ipynb
@@ -96,7 +96,7 @@
         "\n",
         "RESULTS_DIR = './results/BatchSizes/1epoch_' + str(batch_size) + 'batch/''\n",
         "\n",
-        "with open(os.path.join('val_captions.json', 'w')) as fp:\n",
+        "with open(os.path.join(RESULTS_DIR, 'val_captions.json'), 'w')) as fp:\n",
         "    json.dump(predicted_captions, fp)"
       ],
       "execution_count": null,
